Improve reading GenerationStrategy and add feature to make columns generated in target database